# orbit-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/: nightly-validation.json
docs/adr/: 001-orchestration-over-replacement.md  002-engineering-primitives.md  003-gitlab-orchestrates-aap-executes.md  004-service-registry-authoritative.md  005-policy-engine-blocks.md  README.md
docs/architecture/: overview.md
docs/onboarding/: 01-register-service.md  04-enable-observability.md
policies/deployment/: policy.rego
policies/desktop/: policy.rego
policies/image_build/: policy.rego  scan_policy.rego
scripts/: nightly_agent.py
src/orbit/: __init__.py
src/orbit/cli/: main.py
src/orbit/core/: config.py
src/orbit/models/: service.py
src/orbit/policy/: client.py
src/orbit/registry/: api.py  client.py
src/orbit/validator/: pipeline.py
tests/: test_models.py  test_policy.py  test_registry.py  test_validator.py
